Fix broken styles on FF

--- a/css/style.css
+++ b/css/style.css
@@ -753,6 +753,7 @@ h3.resume__date {
 .quick-links__container img:nth-of-type(2) {
   position: absolute;
   opacity: 0;
+  left: 0;
 }
 
 
